--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "namaste-react-2.0",
   "version": "1.0.0",
-  "description": "This Namaste React ",
-  "main": "app.js",
+  "description": "This is Namaste React ",
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html",
@@ -22,7 +21,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0"
   },
   "browserlist": [
     "all"
